# movie-narrator

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  test.yml
.superpowers/sdd/: progress.md  task1-review.patch  task2-brief.md  task5-review.patch
docs/: AI_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  LLM_PROVIDERS.md  ROADMAP.md  ROADMAP.zh-CN.md
docs/checklists/: L2_DEFECTS.md  L2_HANDTEST.md  L2_HANDTEST_20260719.md  L2_HANDTEST_20260721.md  L2_HANDTEST_20260723.md  L2_HANDTEST_G2_20260724.md
docs/llm-providers/: alibaba-bailian.md  ollama.md  siliconflow.md  xiaomi-mimo.md  zhipu.md
examples/: ci-test.yaml  cli-usage.sh  job.example.yaml
examples/l2/: README.md  job.l2.douyin.yaml  run_g1.example.ps1  run_g1.example.sh  samples.yaml
src/movie_narrator/: __init__.py  cli.py  config.py  contract.py  models.py
tests/: test_align.py  test_assets.py  test_audio_mix.py  test_audit_integration.py  test_bgm.py  test_cli_config.py  test_cli_debug.py  test_cli_resolve.py  test_context.py  test_contract.py  test_deliverable_qa.py  test_e2e_smoke.py  test_ep1_weighted_acts.py  test_errors.py  test_json_parser.py  test_match.py  test_optional_deps.py  test_pipeline_cancel.py  test_pipeline_pause.py  test_preflight.py  test_presets.py  test_qa.py  test_render.py  test_render_real.py  test_research.py  test_resolve.py  test_runner_strict.py  test_runner_workflow_metadata.py  test_scenes.py  test_script.py  test_script_export.py  test_settings.py  test_step_retry.py  test_text_image.py  test_translate.py  test_tts_cache.py  test_tts_providers.py  test_video_layout.py  test_vision.py  test_web_api.py  (+8 more)
webui/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
webui/src/: App.tsx  main.tsx
(+107 files in other folders)
