[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "movie-narrator"
version = "0.4.16"
description = "Generate narrated movie recap videos from a single prompt."
readme = "README.md"
license = {text = "AGPL-3.0"}
authors = [
    {name = "zcbacxc", email = "zcbacxc@users.noreply.github.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "edge-tts>=7.0.0",
    "moviepy>=2.0,<3.0",
    "pillow>=11.0.0",
    "pydub>=0.25.0",
    "pyyaml>=6.0",
    "tqdm>=4.0.0",
    'audioop-lts>=0.2.0; python_version >= "3.13"',
]

[project.optional-dependencies]
media = ["scenedetect>=0.6"]
ml = [
    'whisperx>=3.0; python_version < "3.14"',
    'sentence-transformers>=3.0; python_version < "3.14"',
]
web = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
]
full = [
    "scenedetect>=0.6",
    'whisperx>=3.0; python_version < "3.14"',
    'sentence-transformers>=3.0; python_version < "3.14"',
    "movie-narrator[web]",
]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/zcbacxc/movie-narrator"
Repository = "https://github.com/zcbacxc/movie-narrator"
Issues = "https://github.com/zcbacxc/movie-narrator/issues"

[project.scripts]
mn = "movie_narrator.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["movie_narrator*"]

[tool.setuptools.package-data]
"movie_narrator.web_api" = ["static/**"]
